Revert "fix: align fileinput label"
This reverts commit c1ec812b31e4b60a87811d0a960a96c090d9f774.

--- a/source/sass/component/_fileinput.scss
+++ b/source/sass/component/_fileinput.scss
@@ -6,6 +6,7 @@
         vertical-align: middle;
         text-decoration: none;
         cursor: pointer;
+        line-height: 1;
         font-weight: 500;
         background-color: $color-primary;
         color: $color-white;
